[package]
name = "ngsite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dialoguer = "0.10.3"
env_logger = "0.10.0"
log = "0.4.17"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
tokio = { version = "1.27.0", features = ["full"] }
walkdir = "2.3.3"


# https://crates.io/crates/cargo-cmd
# https://github.com/RazrFalcon/cargo-bloat
[package.metadata.commands]
dev = "cargo watch -c -x 'run'"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
