[package]
name = "ngsite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-compression = { version = "0.4.1", features = ["gzip", "tokio"] }
async-recursion = "1.0.4"
dialoguer = { version = "0.10.4", features = ["fuzzy-select", "editor"] }
directories = "5.0.1"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
minus = { version = "5.3.1", features = ["search", "regex", "static_output"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
users = "0.11.0"
walkdir = "2.3.3"
which = "4.4.0"


# https://crates.io/crates/cargo-cmd
# https://github.com/RazrFalcon/cargo-bloat
[package.metadata.commands]
dev = "cargo watch -c -x 'run'"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
